🤖 AI Auto-Fix: Resolved errors in 2 files